burrow/manifests/burrow-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: burrow-network-policy-zookeeper
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              k8s-app: burrow
      ports:
        - port: 2181
          protocol: TCP
  podSelector:
    matchLabels:
      strimzi.io/cluster: kafka-cluster01-cluster
      strimzi.io/kind: Kafka
      strimzi.io/name: kafka-cluster01-cluster-zookeeper
  policyTypes:
    - Ingress
